WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177306
REGRESSION(
r221465
) WKWebViews without WebGL delegate callbacks crash when WebGL contexts are created
https://bugs.webkit.org/show_bug.cgi?id=177306
Summary
REGRESSION(r221465) WKWebViews without WebGL delegate callbacks crash when We...
Alex Christensen
Reported
2017-09-21 09:36:11 PDT
REGRESSION(
r221465
) WKWebViews without WebGL delegate callbacks crash when WebGL contexts are created
Attachments
Patch
(6.40 KB, patch)
2017-09-21 09:37 PDT
,
Alex Christensen
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-09-21 09:37:11 PDT
Created
attachment 321438
[details]
Patch
Chris Dumez
Comment 2
2017-09-21 09:38:40 PDT
Comment on
attachment 321438
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=321438&action=review
r=me
> Source/WebKit/UIProcess/Cocoa/NavigationState.mm:311 > + return completionHandler(WebGLAllowCreation);
I seem to remember Darin not liking this pattern and preferring doing this on 2 lines.
> Source/WebKit/UIProcess/Cocoa/NavigationState.mm:326 > + return completionHandler(WebGLAllowCreation);
ditto.
Alex Christensen
Comment 3
2017-09-21 09:41:30 PDT
http://trac.webkit.org/r222322
Darin Adler
Comment 4
2017-09-24 17:09:20 PDT
Comment on
attachment 321438
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=321438&action=review
>> Source/WebKit/UIProcess/Cocoa/NavigationState.mm:311 >> + return completionHandler(WebGLAllowCreation); > > I seem to remember Darin not liking this pattern and preferring doing this on 2 lines.
I think that for the WebKit project style guide we have said we should do it on two lines. Maybe should write that out explicitly. But, to be clear, I personally am OK with this pattern, and might adopt it as the style for my own programming outside the WebKit project. As I understand it, this feature was originally added to C++ make template programming easier, rather than because the people proposing it thought it was elegant for non-template cases like this one.
Radar WebKit Bug Importer
Comment 5
2017-09-27 12:19:35 PDT
<
rdar://problem/34693051
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug