REGRESSION(r221465) WKWebViews without WebGL delegate callbacks crash when WebGL contexts are created https://bugs.webkit.org/show_bug.cgi?id=177306 <rdar://problem/34351988>

Reviewed by Chris Dumez.

Source/WebKit:

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::NavigationClient::webGLLoadPolicy const):
(WebKit::NavigationState::NavigationClient::resolveWebGLLoadPolicy const):
I forgot to early return after calling the default completion handler if there's no delegate selector.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WebGLPolicy.mm:
(-[WebGLTestDelegate webView:startURLSchemeTask:]):
(-[DelegateWithoutWebGL webView:runJavaScriptAlertPanelWithMessage:initiatedByFrame:completionHandler:]):
(TEST):



Canonical link: https://commits.webkit.org/193630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222322 268f45cc-cd09-0410-ab3c-d52691b4dbfc